fix: z-indexes

--- a/src/components/product-cards/product-card-slideshow/product-card-slideshow.sass
+++ b/src/components/product-cards/product-card-slideshow/product-card-slideshow.sass
@@ -34,7 +34,7 @@
     display: flex
     justify-content: center
     gap: 3px
-    z-index: 9
+    z-index: 1
     position: absolute
     bottom: 5px
     width: 100%
