--- a/src/components/product-cards/product-item/product-item.sass
+++ b/src/components/product-cards/product-item/product-item.sass
@@ -180,7 +180,6 @@
   flex-direction: column
 
 .product-item__flag
-  z-index: 9
   font-weight: 500
   font-size: 12px
   line-height: 150%
@@ -467,7 +466,7 @@
     padding-top: 5px
 
   & .product-item__content-top
-    height: auto
+    height: 100%
     width: calc(100% - 145px)
     padding-top: 15px
 
@@ -606,7 +605,7 @@
     margin: 0
 
   & .product-item__content-top
-    height: 100%
+    height: auto
     width: 100%
     display: -webkit-box
     display: -ms-flexbox
